IF(NOT GLUT_FOUND)
  RETURN()
ENDIF(NOT GLUT_FOUND)

SET(VSERVER_SRC
  vvserver.cpp
)

IF(CUDA_FOUND)
  INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
ENDIF(CUDA_FOUND)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PTHREAD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../..)

ADD_EXECUTABLE(vserver ${VSERVER_SRC})

TARGET_LINK_LIBRARIES(vserver ${GLUT_LIBRARIES})
TARGET_LINK_LIBRARIES(vserver ${PTHREAD_LIBRARIES})
TARGET_LINK_LIBRARIES(vserver virvo)
