IF(NOT GLUT_FOUND)
  RETURN()
ENDIF(NOT GLUT_FOUND)

SET(VVIEW_INC
  vvobjview.h
  vvperformancetest.h
  vvview.h
)

SET(VVIEW_SRC
  vvobjview.cpp
  vvperformancetest.cpp
  vvview.cpp
)

INCLUDE_DIRECTORIES(../common)

IF(COVISE_BUILD)
  #SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "$ENV{EXTERNLIBS}/glut")
  #FIND_PACKAGE(GLUT)
  USE_GLUT()

  ADD_DEFINITIONS(-DVV_APPLICATION_BUILD)

  ADD_COVISE_EXECUTABLE(vview ${VVIEW_SRC} ${VVIEW_INC})
  TARGET_LINK_LIBRARIES(vview coVirvo ${EXTRA_LIBS}) # ${CMAKE_THREAD_LIBS_INIT} 

  COVISE_INSTALL_TARGET(vview)
ELSE(COVISE_BUILD)
  INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(../..)

  ADD_EXECUTABLE(vview ${VVIEW_INC} ${VVIEW_SRC})

  TARGET_LINK_LIBRARIES(vview ${GLUT_LIBRARIES})
  TARGET_LINK_LIBRARIES(vview virvo)
ENDIF(COVISE_BUILD)

